--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.3.1",
     "@ckeditor/ckeditor5-react": "^9.3.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/bootstrap": "^6.1.15",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
@@ -25,6 +27,7 @@
     "formik": "^2.4.6",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "jvectormap": "^2.0.4",
     "list.js": "^2.3.1",
     "lodash": "^4.17.21",
     "metismenujs": "^1.4.0",
@@ -43,6 +46,7 @@
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
     "react-i18next": "^15.1.1",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
     "react-masonry-css": "^1.0.16",
@@ -67,6 +71,8 @@
     "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "vis-data": "^7.1.9",
+    "vis-timeline": "^7.7.4",
     "web-vitals": "^4.2.4",
     "yet-another-react-lightbox": "^3.21.7",
     "yup": "^1.4.0"
