--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "upzet-react": "file:",
     "vis-data": "^7.1.9",
     "vis-timeline": "^7.7.4",
     "web-vitals": "^4.2.4",
