--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.3.1",
     "@ckeditor/ckeditor5-react": "^9.3.1",
+    "@floating-ui/core": "^1.4.0",
+    "@floating-ui/dom": "^1.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/bootstrap": "^6.1.15",
@@ -20,12 +22,15 @@
     "@testing-library/user-event": "^14.5.2",
     "@vtaits/react-color-picker": "^1.0.2",
     "apexcharts": "^3.54.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.6",
     "draft-js": "^0.11.7",
     "firebase": "^11.0.2",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -34,6 +39,7 @@
     "lodash": "^4.17.21",
     "metismenujs": "^1.4.0",
     "namor": "^3.0.1",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "rc-slider": "^11.1.7",
     "react": "^18.3.1",
@@ -73,6 +79,7 @@
     "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "tailwindcss": "^4.1.10",
     "upzet-react": "file:",
     "vis-data": "^7.1.9",
     "vis-timeline": "^7.7.4",
