--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
+    "react-loading-skeleton": "^3.5.0",
     "react-masonry-css": "^1.0.16",
     "react-modal-video": "^2.0.2",
     "react-rating": "^2.0.5",
