--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.6",
+    "cities.json": "^1.1.50",
     "draft-js": "^0.11.7",
     "firebase": "^11.0.2",
     "flowbite": "^3.1.2",
