--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "chart.js": "^4.4.6",
     "cities.json": "^1.1.50",
     "draft-js": "^0.11.7",
+    "file-saver": "^2.0.5",
     "firebase": "^11.0.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "jszip": "^3.10.1",
     "jvectormap": "^2.0.4",
     "list.js": "^2.3.1",
     "lodash": "^4.17.21",
