--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.10",
+    "react-cache-buster": "^0.1.8",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-countdown": "^2.3.6",
@@ -94,7 +95,8 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "generate-meta-tag": "node ./node_modules/react-cache-buster/dist/generate-meta-tag.js",
+    "build": "npm run generate-meta-tag && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
