--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^4.4.6",
     "cities.json": "^1.1.50",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
     "firebase": "^11.0.2",
     "flowbite": "^3.1.2",
