--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.12",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "jszip": "^3.10.1",
